--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@marigold/components": "^0.0.1",
+    "@marigold/icons": "^0.0.1",
+    "@marigold/layout": "^0.0.1",
+    "@marigold/system": "^0.0.1",
+    "@marigold/theme-b2b": "^0.0.1",
+    "@marigold/types": "^0.0.1",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
@@ -19,7 +25,8 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "react-id-generator": "^3.0.1"
   },
   "keywords": [
     "gatsby"
